objects/Product_Registration__c.object
<CustomObject>
    <description>Created to show the Product Lines associated to a Deal as a Realted List under Deal Registration view.</description>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Registration__c</fullName>
        <label>Deal Registration</label>
        <referenceTo>Deal_Registration__c</referenceTo>
        <relationshipLabel>Product Registrations</relationshipLabel>
        <relationshipName>Product_Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>GBU__c</fullName>
        <label>GBU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Registrations</relationshipLabel>
        <relationshipName>Product_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Registrations</relationshipLabel>
        <relationshipName>Product_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <label>Program Code</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Changed the Label name from Status to Deal Registration Status as per the request DMCR: 3803</description>
        <label>Deal Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product Registration</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Product Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>